# opencode-openhands-integration

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SKILL.md  mcp_server.py  plan.md  pyproject.toml  requirements.txt  setup.sh  test.sh
.agents/: AGENTS.md  hooks.toml
.mcp/: servers.json
chat/: doctrine-executor-revised.md  doctrine-executor-revised.yaml
config/: oh-my-opencode.json.example  opencode.json.example
docs/: ARCHITECTURE.md  EXAMPLES.md  MCP_ENABLEMENT_PLAN.md  ORCHESTRATOR_PATTERNS.md  TROUBLESHOOTING.md
scripts/: capture-baseline.sh  validate_mcps.sh
stack and pass chat/: doctrine-executor-persona.md  doctrine-executor-revised.md  doctrine-executor.yaml
