[project]
name = "opencode-openhands-integration"
version = "1.0.0"
description = "Production-ready integration connecting OpenCode + Oh My OpenCode to OpenHands via MCP"
authors = [
    {name = "fvegiard", email = "fvegiard@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["opencode", "openhands", "mcp", "ai", "agents", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.27.0",
    # OpenHands dependencies (install separately from source)
    # "openhands @ git+https://github.com/fvegiard/OpenHands.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/fvegiard/opencode-openhands-integration"
Repository = "https://github.com/fvegiard/opencode-openhands-integration"
Issues = "https://github.com/fvegiard/opencode-openhands-integration/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
